fixing design issues

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="p-3 container-fluid text-primary ">
             <i class="fas fa-bars fs-6"></i> <span class="fs-6">Shop</span>
             <span class="bg-white h-25 px-2 py-1 m-2 border-radius-50">WareHouse Savings</span>
-            <span class="bg-white h-25 px-2 py-1 m-1 border-radius-50">Treasure Hunt</span>
+            <span class="bg-white h-25 px-2 py-1 m-1 border-radius-50">Treasure</span>
         </div>
     </div>
     <!-- end of category header  -->
@@ -42,9 +42,9 @@
 <!-- end of header  -->
 
 <!-- main -->
-<main class="container position-absolute top-10">
+<main class="container position-absolute top-13">
     <div class="row p-3 fs-7">
-        <div class="col-4">
+        <div class="col-5">
             <p>My Warehouse</p>
             <p><i class="fas fa-map-marker-alt"></i> <strong class="text-decoration-underline">Vaughan</strong></p>
             <p class="fs-8 text-green"><small>Open until 8:30 pm</small></p>
@@ -53,7 +53,7 @@
             <p>Delivery Location</p>
             <p><i class="fas fa-box-open"></i> <strong class="text-decoration-underline text">MVC 123</strong> </p>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <div class="bg-primary text-white text-center"><a href="./index.html" class="text-white text-decoration-none">English</a></div>
             <div class="disabled-language-button text-white text-center mt-2px"><a href="./french.html" class="text-white text-decoration-none">Francais</a></div>
             <div class="disabled-language-button text-white text-center">Italiano</div>
@@ -70,7 +70,7 @@
         </div>
         <div id="rating">
             <p class="row">
-                <span class="col-4 text-primary">
+                <span class="col-5 text-primary">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -80,7 +80,7 @@
                 <span class="col-3">
                     4.0(10)
                 </span>
-                <span class="col-5">
+                <span class="col-4">
                     Write a review
                 </span>
             </p>
