--- a/french.html
+++ b/french.html
@@ -34,7 +34,7 @@
         <div class="p-3 container-fluid text-primary ">
             <i class="fas fa-bars fs-6"></i> <span class="fs-6">Boutique</span>
             <span class="bg-white h-25 px-2 py-1 m-2 border-radius-50">Économies d'entrepôt</span>
-            <span class="bg-white h-25 px-2 py-1 m-1 border-radius-50">Chasse au </span>
+            <span class="bg-white h-25 px-2 py-1 m-1 border-radius-50">Chasse </span>
         </div>
     </div>
     <!-- end of category header  -->
@@ -42,9 +42,9 @@
 <!-- end of header  -->
 
 <!-- main -->
-<main class="container position-absolute top-10">
+<main class="container position-absolute top-13">
     <div class="row p-3 fs-7">
-        <div class="col-4">
+        <div class="col-5">
             <p>Mon Entrepôt</p>
             <p><i class="fas fa-map-marker-alt"></i> <strong class="text-decoration-underline">Vaughan</strong></p>
             <p class="fs-8 text-green"><small>Ouvert jusqu'à 8:30 pm</small></p>
@@ -53,7 +53,7 @@
             <p>Lieu de livraison</p>
             <p><i class="fas fa-box-open"></i> <strong class="text-decoration-underline text">MVC 123</strong> </p>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <div class="bg-primary text-white text-center"><a href="./french.html" class="text-white text-decoration-none">Francais</a></div>
             <div class="disabled-language-button text-white text-center mt-2px"><a href="./index.html" class="text-white text-decoration-none">English</a></div>
             <div class="disabled-language-button text-white text-center">Italiano</div>
