fixing design issues

--- a/french.html
+++ b/french.html
@@ -62,7 +62,7 @@
     <div id="item" class="pb-5">
         <div class="row fw-bold">
             <p class="col-6 text-danger"><span class="text-primary">Épicerie</span> Costco </p>
-            <p class="col-6"><a href="./in-store-map.html" class="text-decoration-none"><i class="fas fa-map-marker-alt text-danger"></i><span class="text-black">Allée 66, Baie 008 </span> <i class="fas fa-location-arrow text-black"></i></a></p>
+            <p class="col-6"><a href="/" class="text-decoration-none"><i class="fas fa-map-marker-alt text-danger"></i><span class="text-black">Allée 66, Baie 008 </span> <i class="fas fa-location-arrow text-black"></i></a></p>
         </div>
         <div id="item-title fs-8">
             <p>Café moulu Folgers, 816g</p>
