fixing design issues

--- a/french.html
+++ b/french.html
@@ -20,7 +20,7 @@
             <form class="d-flex form-group">
                 <div class="input-group">
                     <span class="input-group-text bg-white border-end-0 fw-light border-radius-50" >  <i class="fa fa-search  rotate-search-icon"></i></span>
-                    <input type="text" class="form-control border-start-0 me-2 fw-light border-radius-50" placeholder="Rechercher  Coastco.ca" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="text" class="form-control border-start-0 me-2 fw-light border-radius-50" placeholder="Rechercher  Costco.ca" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
             </form>
             <i class="far fa-user-circle text-white fs-2"></i>
