--- a/template.html
+++ b/template.html
@@ -20,7 +20,7 @@
             <form class="d-flex form-group">
                 <div class="input-group">
                     <span class="input-group-text bg-white border-end-0 fw-light border-radius-50" >  <i class="fa fa-search  rotate-search-icon"></i></span>
-                    <input type="text" class="form-control border-start-0 me-2 fw-light border-radius-50" placeholder="Search Coastco.ca" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="text" class="form-control border-start-0 me-2 fw-light border-radius-50" placeholder="Search Costco.ca" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
             </form>
             <i class="far fa-user-circle text-white fs-2"></i>
@@ -34,7 +34,7 @@
         <div class="p-3 container-fluid text-primary ">
             <i class="fas fa-bars fs-6"></i> <span class="fs-6">Shop</span>
             <span class="bg-white h-25 px-2 py-1 m-2 border-radius-50">WareHouse Savings</span>
-            <span class="bg-white h-25 px-2 py-1 m-1 border-radius-50">Treasure Hunt</span>
+            <span class="bg-white h-25 px-2 py-1 m-1 border-radius-50">Treasure</span>
         </div>
     </div>
     <!-- end of category header  -->
@@ -42,14 +42,14 @@
 <!-- end of header  -->
 
 <!-- main -->
-<main class="container position-absolute top-10">
-    <div class="row p-3 fs-7">
+<main class="container position-absolute top-14">
+    <div class="row p-3 fs-8">
         <div class="col-4">
             <p>My Warehouse</p>
             <p><i class="fas fa-map-marker-alt"></i> <strong class="text-decoration-underline">Vaughan</strong></p>
-            <p class="fs-8 text-green"><small>Open until 8:30 pm</small></p>
+            <p class="fs-9 text-green"><small>Open until 8:30 pm</small></p>
         </div>
-        <div class="col-5 ">
+        <div class="col-5">
             <p>Delivery Location</p>
             <p><i class="fas fa-box-open"></i> <strong class="text-decoration-underline text">MVC 123</strong> </p>
         </div>
@@ -62,7 +62,7 @@
     <div id="item" class="pb-5">
         <div class="row fw-bold">
             <p class="col-6 text-danger">Costco <span class="text-primary">Grocery</span></p>
-            <p class="col-6"><a href="./in-store-map.html" class="text-decoration-none"><i class="fas fa-map-marker-alt text-danger"></i><span class="text-black">Aisle 66,  Bay 008 </span> <i class="fas fa-location-arrow text-black"></i></a></p>
+            <p class="col-6"><a href="/" class="text-decoration-none"><i class="fas fa-map-marker-alt text-danger"></i><span class="text-black">Aisle 66,  Bay 008 </span> <i class="fas fa-location-arrow text-black"></i></a></p>
         </div>
         <div id="item-title fs-8">
             <p>Folgers Ground Coffee, 816g</p>
@@ -70,7 +70,7 @@
         </div>
         <div id="rating">
             <p class="row">
-                <span class="col-4 text-primary">
+                <span class="col-5 text-primary">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -80,7 +80,7 @@
                 <span class="col-3">
                     4.0(10)
                 </span>
-                <span class="col-5">
+                <span class="col-4">
                     Write a review
                 </span>
             </p>
